--- a/08_mongosite/templates/index.html
+++ b/08_mongosite/templates/index.html
@@ -1,5 +1,5 @@
 <!--
-Team Git Flasking - Addison Huang and Matthew Ming
+Team Git Flasking - Addison Huang, Matthew Ming and Hasif Ahmed
 SoftDev2 pd8
 -->
 <!DOCTYPE html>
@@ -12,7 +12,11 @@ SoftDev2 pd8
 
     Search for Nobel Prize Winners by Name
     <form action="/" method="POST">
+      Name:
       <input type="text" name="name" id="name">
+      <br>IP:
+      <input type="text" name="ip" id="ip">
+      <br>
       <input type="submit" name="submit" id="submit">
     </form>
 
